syntax = "proto3";

package pb;

option go_package = "github.com/ebukacodes21/peerbill-trader-api/pb";

message UpdateOrderRequest {
    int64 id = 1;
    string username = 2;
    string order_type = 3;
}

message UpdateOrderResponse {
    string message = 1;
}